--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-  "token": "MTM4MDk0NTg4NDE3NDQ4NzY2NA.GoqUpo.AgQkbiuY_7c1BWkqBNWMz0_T6Tr_XAU5Lat8uc",
+  "token": "Bot-Token",
   "prefix": ".",
   "emoji": "📌",
-  "ownerID": "1195760072068972577",
+  "ownerID": "Owner-ID",
   "version": "1.0",
   "status": [
     "www.youtube.com/@swenzyimm",
