--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-  "token": "Bot-Token",
+  "token": "MTQwNzQzODQwNzA1OTExMTk2Ng.Grsrw4.cl2434VG8kdNdkzUWC0trY-S9Fs9lDTpCeQZEc",
   "prefix": ".",
   "emoji": "📌",
-  "ownerID": "Owner-ID",
+  "ownerID": "1195760072068972577",
   "version": "1.0",
   "status": [
     "www.youtube.com/@swenzyimm",
