--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "@swenzyim Tarafindan Yapilmisdir.",
   "dependencies": {
     "discord.js": "^14.19.3",
+    "express": "^4.18.2",
     "node-fetch": "^2.7.0"
   }
 }
