--- a/config.json
+++ b/config.json
@@ -6,9 +6,9 @@
   "version": "1.0",
   "status": [
     "www.youtube.com/@swenzyimm",
-    ".yardım",
+    "x!yardım | ExBOT",
     "www.youtube.com./@swenzyimm",
-    ".yardım"
+    "x!yardım | ExBOT"
   ],
   "statusInterval": 30000
 }
