--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "token": "MTM4MDk0NTg4NDE3NDQ4NzY2NA.Gb8TyU.2gb9MHy7-vb2_y-UJy2nFnXpNwy71wiDQ00jqc",
-  "prefix": ".",
+  "prefix": "x!",
   "emoji": "📌",
   "ownerID": "1195760072068972577",
   "version": "1.0",
